--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^3.4.4",
     "web-vitals": "^1.1.2"
+    "bootstrap": "^5.1.3",
+
   },
   "scripts": {
     "start": "react-scripts start",
