--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^3.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
     "bootstrap": "^5.1.3"
 
   },
